# SimpleNobleG4Detector

./: .gitignore  CMakeLists.txt  LArMain.cc  NobleG4.cc  README.md  init_vis.mac  run1.mac  scan.mac  vis.mac
G4/: CMakeLists.txt  init_vis.mac
G4/PythonScripts/: ProcessScan.py  Regression.py  ScanEnergy.py  TrackReconstruction.py
G4/include/: NobleG4Analysis.hh  NobleG4DetectorConstruction.hh  NobleG4RunAction.hh  NobleG4SensitiveDetector.hh
G4/src/: NobleG4Analysis.cc  NobleG4DetectorConstruction.cc  (+3 more)
PythonScripts/: PredictYields.py  ProcessScan.py  T_delta_Scan_Fig8.py  TrackReconstruction.py
Regression/: CMakeLists.txt  Regression.cc
Regression/PythonScripts/: PlotSummary.py  Regression.py  Segmentation.py  TrackReconstruction.py  cfg.yaml
Regression/include/: Configuration.hh  Dataset.hh  EvalCUDA.hh  G4Input.hh  NuDataset.hh
Regression/src/: Configuration.cc  DMDataset.cc  Dataset.cc  EvalCUDA.cu  EvalCUDA_Birks3D.cu  G4Input.cc  NuDataset.cc  RegContainer.cc  birks.py  regression.py
SourceMacros/: 113Sn_ceK2_364keV.mac  133Ba_gamma_81keV.mac  22Na_gamma_511keV.mac  57Co_gamma_122keV.mac  60Co_gamma_1173keV.mac  60Co_gamma_1333keV.mac  7Li_compton_283keV.mac  7Li_compton_42keV.mac  7Li_compton_76keV.mac  7Li_compton_86keV.mac  RunAllSource.mac
arxiv/: CMakeLists.txt
arxiv/PythonScripts/: BestParameters.py
arxiv/include/: DMDataset.hh  EvalCUDA.hh  EvalCUDA_Birks3D.hh  NuDataset.hh  RegContainer.hh
arxiv/src/: Configuration.cc  EvalCUDA.cu  EvalCUDA_Birks3D.cu  G4Input.cc  RegContainer.cc
include/: NobleG4ActionInitialization.hh  NobleG4Analysis.hh  NobleG4DetectorConstruction.hh  NobleG4EventAction.hh  NobleG4Hit.hh  NobleG4PrimaryGeneratorAction.hh  NobleG4RunAction.hh  NobleG4SensitiveDetector.hh  NobleG4SteppingAction.hh  NobleG4VoxelHit.hh
src/: LArActionInitialization.cc  LArEventAction.cc  NobleG4ActionInitialization.cc  NobleG4Analysis.cc  NobleG4DetectorConstruction.cc  NobleG4EventAction.cc  NobleG4Hit.cc  NobleG4PrimaryGeneratorAction.cc  NobleG4RunAction.cc  NobleG4SensitiveDetector.cc  NobleG4SteppingAction.cc
(+32 files in other folders)
